# polars-playground

./: README.md  docker-compose.yml
examples/anti-join/: Cargo.toml
examples/anti-join/src/: main.rs
examples/aws_parquet/: .env.template  Cargo.toml
examples/aws_parquet/src/env/: main.rs
examples/aws_parquet/src/profile/: main.rs
examples/azure/: Cargo.toml
examples/azure/src/csv/: main.rs
examples/azure/src/parquet/: main.rs
examples/azure_parquet/: Cargo.toml
examples/custom_expression/: .gitignore  Cargo.toml  Makefile  README.md  app.py  benchmark.ipynb  pyproject.toml
examples/custom_expression/.cargo/: config.toml
examples/custom_expression/polars_casing/: __init__.py
examples/custom_expression/src/: lib.rs
examples/custom_expression/tests/: test_custom_expression.py
examples/set-intersection/: Cargo.toml
examples/set-intersection/src/: main.rs
examples/stackoverflow/: Cargo.toml
examples/stackoverflow/apply/: Cargo.toml
examples/stackoverflow/apply/benches/: examples.rs
examples/stackoverflow/apply/src/: main.rs
examples/stackoverflow/filter-numbers/: Cargo.toml
examples/stackoverflow/filter-numbers/src/: main.rs
examples/stackoverflow/flatten_struct/: Cargo.toml
examples/stackoverflow/flatten_struct/src/: main.rs
examples/stackoverflow/jackard/: Cargo.toml
examples/stackoverflow/nullnan/src/: main.rs
examples/stackoverflow/timedelta/: Cargo.toml
examples/stackoverflow/timedelta/src/: main.rs
examples/stddev-horizontal/: Cargo.toml
examples/stddev-horizontal/src/: main.rs
examples/unnest-json/: Cargo.toml
examples/unnest-json/src/: main.rs
examples/write_sqlserver/: Cargo.toml
examples/write_sqlserver/src/: main.rs
src/: main.rs
