[package]
name = "polars_casing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "polars_casing"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.35", features = ["fmt"] }
polars-core = { version = "0.35" }
polars-ffi = { version = "0.35" }
polars-plan = { version = "0.35" }
polars-lazy = { version = "0.35" }
pyo3-polars = { version = "*", features = ["derive"] }
pyo3 = { version = "0.20", features = ["extension-module"] }
