[tool.poetry]
name = "polars_casing"
version = "0.1.0"
description = ""
authors = ["Jan Vanbuel <janvanbuel@hotmail.com>"]
readme = "README.md"
packages = [{ include = "polars_casing" }]

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^1.3"
polars = "^0.19.7"
cffi = "^1.16.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

