[package]
name = "example-apply"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
divan = "0.1.2"
itertools = "0.12.0"
polars = { version = "0.35.2", features = ["lazy", "dtype-struct"] }
rand = "0.8.5"

[[bench]]
name = "examples"
harness = false


